<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:text="@string/text1"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/teamAScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score1"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:textSize="30sp"
                        android:layout_marginTop="16dp"/>
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/button1"
                        android:textColor="@android:color/black"
                        android:background="@color/score"
                        android:onClick="bnt3A" />
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:textColor="@android:color/black"
                        android:background="@color/score"
                        android:text="@string/button2"
                        android:onClick="bnt2A" />
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/button3"
                        android:textColor="@android:color/black"
                        android:background="@color/score"
                        android:onClick="bnt1A" />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="390dp"
                    android:background="@android:color/black" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:text="@string/text2"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/teamBScore"
                        android:text="@string/score2"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:textSize="30sp"
                        android:layout_marginTop="16dp"/>
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:text="@string/button1"
                        android:textColor="@android:color/black"
                        android:background="@color/score"
                        android:onClick="bnt3B" />
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:textColor="@android:color/black"
                        android:background="@color/score"
                        android:text="@string/button2"
                        android:onClick="bnt2B" />
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:textColor="@android:color/black"
                        android:background="@color/score"
                        android:text="@string/button3"
                        android:onClick="bnt1B" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="32dp"
                android:text="@string/button4"
                android:textColor="@android:color/black"
                android:background="@color/score"
                android:onClick="btn4"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
